--- a/index.html
+++ b/index.html
@@ -2,19 +2,32 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>html5</title>
-  <style type="text/css">
-    .theme{
-      display: block;
-      width: 200px;
-      font-size: 30px;
-      margin: 100px auto;
-    }
-  </style>
+  <title>五号线小b</title>
+  <link rel="stylesheet" href="css/jquery.fullPage.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
+  <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+  <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
+  <script type="text/javascript">
+    $(function() {
+      $.fn.fullpage({
+        verticalCentered: false,
+        anchors: ['page1', 'page2'],
+        navigation: true,
+        navigationTooltips: ['首页', '视觉']
+      });
+    });
+
+  </script>
 </head>
 <body>
-<div class="theme">
-  CV
+<div class="section section1">
+  <div class="bg"><img src="css/images/bg1.jpg" alt=""></div>
+</div>
+
+<div class="section section2">
+  <div class="bg"><img src="css/images/bg1.jpg" alt=""></div>
 </div>
 
 </body>
